2021-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (DestroyJNG): Deallocate alpha_image temporary file in DestroyJNG().
        (ReadOnePNGImage): If setjmp fires, then don't return a broken
        image.

2021-12-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * magick/wpg.c: Fix incorrect TrX and TrY elements in CTM.
        Backported from WP2LaTeX: https://hg.osdn.net/view/wp2latex/wp2latex/rev/ce47149e7e67

2021-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * utilities/tests/convert.tap: Use sed to count file lines rather
        than wc since wc output is inconsistent.  Fixes SourceForge issue
        #657 "Convert test fails in 1.3.37".

        * configure.ac: Search for a GnuPG 'gpg' program.

        * Makefile.am (snapshot): Add support for PGP-signed snapshots.

        * www/download.rst: Add documentation for how to validate
        downloaded files.

2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * version.sh: Update shared library versioning information for
        forthcoming 1.3.37 release.

        * scripts/graphicsmagick_snapshot_copy-ssh: Sample
        graphicsmagick_snapshot_copy script which uses scp to copy
        snapshot files to a directory at a remote host, and then rsync
        over ssh from there to SourceForge.  Copy to a local script
        directory and edit to suit local requirements.

        * scripts/graphicsmagick_snapshot_copy-local: Sample
        graphicsmagick_snapshot_copy script to copy snapshot files to a
        local directory and then rsync over ssh to SourceForge.  Copy to a
        local script directory and edit to suit local requirements.

        * Makefile.am (snapshot): Rely on the graphicsmagick_snapshot_copy
        script to reduce files we don't care to distribute so that all
        targets are still produced.

        * coders/jp2.c (alloc_rlm): JasPer expects its allocator to return
        non-null for zero size
