@@ -37,9 +37,14 @@
 
 <p>2021-12-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
-* coders/png.c (DestroyJNG): Deallocate alpha_image temporary file in DestroyJNG().
+<p>* magick/signature.c: Remove functions FinalizeSignature,
+GetSignatureInfo, TransformSignature, UpdateSignature and other
+private implementation details from signature.h.  Use managed
+memory allocator.</p>
+<p>* coders/png.c (DestroyJNG): Deallocate alpha_image temporary file in DestroyJNG().
 (ReadOnePNGImage): If setjmp fires, then don't return a broken
-image.</blockquote>
+image.</p>
+</blockquote>
 <p>2021-12-18  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 * magick/wpg.c: Fix incorrect TrX and TrY elements in CTM.
